Fix dropdown menu dots going off the container on smaller screens

--- a/src/styles/Post.module.css
+++ b/src/styles/Post.module.css
@@ -7,7 +7,7 @@
 
 .Container {
     display: grid;
-    grid-template-columns: 60px auto 200px;
+    grid-template-columns: 60px auto 60px;
     grid-template-rows: 30px 30px;
     grid-auto-flow: row;
 }
